--- a/index.html
+++ b/index.html
@@ -219,40 +219,33 @@
                                     <h6>2016-Present</h6> <!--edit here-->
                                     <h4 class="mb-2">Paulsen Media Group</h4> <!--edit here-->
                                     <h3 class="mb-2">Senior Developer</h3> <!--edit here-->
-                                    <p>Actively Seek New Programming Knowledge
-Build Products Using HTML/CSS/JS and Other Front-End Technologies
-Code and Deploy Applications in a Cross-Platform, Cross-Browser Environment
-Detail-Oriented
-Document Project Build and Maintenance
-Experience Building User Interfaces and Prototypes From Wireframes and Designs
-Experience With Git and Github
-Experience With Photoshop
-Familiar With Development and Debugging Tools for Cross-Browser Issues
-Familiar With Social Media and Third Party APIs
-Follow and Implement Industry Accepted Best Practices and Tools
-Manage and Prioritize Multiple Projects
-Proficient With Javascript
-Implemented UI design using HTML and CSS.
-Developed payment gateway using Backbone, Stripe and Parse.
-Designed and built signup and login pages using HTML and JavaScript and used Parse to save user information on the cloud.
-Implemented voice-to-text function using Google Speech Recognition API.
-Fulfilled the key words recognition with Open Calais API, and translated key words to pictures using Flickr API.
-Combined the several APIs on Aliyun cloud server and organized them in a fancy way by jQuery and HTML5.
-Gathered specs from client to create a feasible workflow
-Utilized MVC principles to ensure a clean architecture and a lean code base for maximum
-Help integrate functionality into new existing JAVA based applications running on a bootstrap based library.
-Solid Understanding of HTML5/CSS3, jQuery and Responsive Design
-Intensive
-Tag Integration 
-Adobe DTM
-Tealium
-Google Tag Manager
-Troubleshoot and Communicate Effectively
-Update Current Websites to Meet Modern Web Standards
-UI / UX
-PPC Management
-Social Media Marketing
-Social Media Management
+                                    <p><ul>
+	<li>Creating and optimizing ad campaigns, maximizing conversions for our customers.</li>
+	<li>Analyze information quickly and make data-driven decisions to adjust budget spend.</li>
+	<li>Effectively summarize and communicate campaign performance information directly to customers.</li>
+	<li>Utilize reporting, analytics and trend tools such as Google AdWords, Analytics and Tag Manager.</li>
+	<li>Proactively identify key value-adds, insights, and recommendations for your accounts.</li>
+	<li>Resolve any campaign issues, providing effective and timely solutions.</li>
+	<li>Research latest digital marketing and paid search trends.</li>
+	<li>Tag Integration </li>
+	<li>Adobe DTM</li>
+	<li>Tealium</li>
+	<li>Google Tag Manager</li>
+	<li>Work collaboratively with other internal groups – including Social Media, SEO, Performance Management, Support and Sales teams.</li>
+	<li>Experience with PPC systems and tools.</li>
+	<li>capture and implement designs created by the UI team, add new functionality, enhancements, and improvements on the overall website aesthetic.</li>
+	<li>Rewrite existing code, and add new code on top of the pre-existing code.</li>
+	<li>Developed script to capture all online website data for Adobe Insight implementation</li>
+	<li>Debugged and troubleshoot JavaScript code using tools such as FireBug, Fiddler</li>
+	<li>Using JavaScript, SVG and HTML5 canvas developed novel and compelling widgets, tools, demos, and contributed to the advancement and promotion of this framework.</li>
+	<li>Ability to manage multiple projects at the same time while maintaining sharp attention to detail.</li>
+	<li>Excellent communication skills, great with people, good phone presence.</li>
+	<li>Organized and able to meet deadlines consistently.</li>
+	<li>Google Paid Placement Advertising</li>
+	<li>Amazon Advertising</li>
+	<li>Facebook and Instagram Advertising</li>
+	<li>ROI Calculations and Google Analytics power user</li>
+</ul>
 </p>
                                 </div>
                             </div>
@@ -265,32 +258,34 @@ Social Media Management
                                     <h3 class="mb-2">Internet Sales Director</h3> <!--edit here-->
                                     <p>As the Internet sales Manager my main responsibility was to facilitate the sales of automobiles to prospects who contacted the dealer via the Internet. To do so, I maintained the dealer website, promoted the dealership online, managed the export of inventory to various digital marketplaces,Social Media Marketing,  and directed a team of 5-6 salespeople. I also had broad IT related responsibilities, including new workstation setup, troubleshooting and repair, basic networking, malicious software removal, network phone setup, graphic design and training employees to effectively use the ELeads CRM software.
 
-Website development 
-Home Net
-Fuzion Zone
-Third party Integrations such as CarFax, Cargurus, etc.  
-Marketing Director 
-PPC
-Amazon
-Social Media
-Set up direct mailers 
-Sales Team management 
-Social network management 
-Billboards and TV/Internet advertisements
-Eleads specialist 
-manage new and used car online inventory by changing prices, removing sold, adding videos and pictures  
-Create, maintain and measure the internet business development processes 
-Generate appointments and quotes by means of proactive outbound  
-prospecting and lead activity management in an effort to qualify and market to potential customers 
-Handle all incoming internet email leads 
-Be available to respond to email inquiries in a professional, well-spoken manner 
-Assist customers in appropriate vehicle selection – be the product expert & sounding board 
-Direct customers to product information resources, including those available on the internet 
-Check email frequently and respond to inquiries immediately 
-Deliver inquiries/messages intended for other sales personnel and departments promptly 
-Hold yourself and others to high moral and ethical standards and conduct yourself with honesty and integrity 
-Manage business development representatives for lead generation process 
-Develop and maintain the new hire and interview processes for all BDC reps/appointment coordinators
+<ul>
+	<li>Website development </li>
+	<li>Home Net</li>
+	<li>Fuzion Zone</li>
+	<li>Third-party Integrations such as CarFax, Cargurus, etc.  </li>
+	<li>Marketing Director </li>
+	<li>PPC</li>
+	<li>Amazon</li>
+	<li>Social Media</li>
+	<li>Set up direct mailers </li>
+	<li>Sales Team management </li>
+	<li>Social network management </li>
+	<li>Billboards and TV/Internet advertisements</li>
+	<li>Eleads specialist </li>
+	<li>manage new and used car online inventory by changing prices, removing sold, adding videos and pictures  </li>
+	<li>Create, maintain and measure internet business development processes </li>
+	<li>Generate appointments and quotes by means of proactive outbound  </li>
+	<li>prospecting and lead activity management in an effort to qualify and market to potential customers </li>
+	<li>Handle all incoming internet email leads </li>
+	<li>Be available to respond to email inquiries in a professional, well-spoken manner </li>
+	<li>Assist customers with appropriate vehicle selection – be the product expert & sounding board </li>
+	<li>Direct customers to product information resources, including those available on the internet </li>
+	<li>Check email frequently and respond to inquiries immediately </li>
+	<li>Deliver inquiries/messages intended for other sales personnel and departments promptly </li>
+	<li>Hold yourself and others to high moral and ethical standards and conduct yourself with honesty and integrity </li>
+	<li>Manage business development representatives for the lead generation process </li>
+	<li>Develop and maintain the new hire and interview processes for all BDC reps/appointment coordinators</li>
+</ul>
 </p>
                                 </div>
                             </div>
