--- a/index.html
+++ b/index.html
@@ -155,8 +155,40 @@
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-7">
                     <div class="about-right wow fadeInDown" data-wow-delay="0.8s">
-                        <h1>I'm <span class="text-primary">Drake Paulsen</span> and I'm a Full stack Developer</h1> <!--change name and designation here-->
-                        <p>I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development, Android app development, iOS app development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.</p>
+                        <h1><span class="text-primary">Drake Paulsen</span>I have vast knowledge in html, css, Javascript , JQuery, Angular (javascript framewok), wordpress theme development, Android app development, iOS app development and so on. The work I provide is of highest quality, fully responsive, and tested in a wide range of devices.
+
+<ul>
+	<li>Experience in development and deployment of applications using JBoss, Weblogic Application Server, IBM WebSphere Application and Apache Tomcat.</li>
+	<li>Hands-on experiences with Core Java with Multithreading, Concurrency, File Handling I/O, Generics, Data Structures and Collections, Garbage Collection.</li>
+	<li>Proficient in UI design, developed Front End using JSP,HTML5,CSS3,JavaScript,Ajax, JQuery,AngularJS,Angular 2.0,NodeJs,ReactJs and have knowledge on Backbone Js.</li>
+	<li>Experience in Java 8 features like Parallel Streams, Lambdas, functional interfaces, and filters.</li>
+	<li>Experienced with RDBMS implementation and development using Oracle, My SQL, MSSQL, and DB2.</li>
+	<li>Experience in Mock Testing.</li>
+	<li>Experience in using bug/issue tracking, project Tracking and Management tool JIRA.</li>
+</ul>
+<BR>
+    <ul>
+	Languages:
+	<li>C</li>
+	<li>C++</li>
+	<li>Java </li>
+	<li>SQL</li>
+	<li>PLSQL</li>
+	<li>HTML5</li>
+	<li>PHP</li>
+	<li>XML</li>
+	<li>XHTML</li>
+	<li>HTML</li>
+	<li>CSS</li>
+	<li>JavaScript</li>
+	<li>AJAX</li>
+	<li>jQuery</li>
+	<li>JSON</li>
+	<li>Angular2.0</li>
+	<li>Bootstrap</li>
+	<li>NodeJS</li>
+	<li>backboneJS</li>
+</ul></p>
                         <div class="socials">
                             <ul>
                                 <li><a href="https://www.facebook.com/DrakePaulsen"><i class="fa fa-facebook"></i></a></li>
@@ -256,18 +288,36 @@
                                     <h6>2013-2018</h6> <!--edit here-->
                                     <h4 class="mb-2">The TKO Group</h4> <!--edit here-->
                                     <h3 class="mb-2">Internet Sales Director</h3> <!--edit here-->
-                                    <p>As the Internet sales Manager my main responsibility was to facilitate the sales of automobiles to prospects who contacted the dealer via the Internet. To do so, I maintained the dealer website, promoted the dealership online, managed the export of inventory to various digital marketplaces,Social Media Marketing,  and directed a team of 5-6 salespeople. I also had broad IT related responsibilities, including new workstation setup, troubleshooting and repair, basic networking, malicious software removal, network phone setup, graphic design and training employees to effectively use the ELeads CRM software.
-
-<ul>
+                                    <p><ul>
+	<li>Creating and optimizing ad campaigns, maximizing conversions for our customers.</li>
+	<li>Analyze information quickly and make data-driven decisions to adjust budget spend.</li>
+	<li>Effectively summarize and communicate campaign performance information directly to customers.</li>
+	<li>Utilize reporting, analytics and trend tools such as Google AdWords, Analytics and Tag Manager.</li>
+	<li>Proactively identify key value-adds, insights, and recommendations for your accounts.</li>
+	<li>Resolve any campaign issues, providing effective and timely solutions.</li>
+	<li>Research latest digital marketing and paid search trends.</li>
+	<li>Tag Integration </li>
+	<li>Adobe DTM</li>
+	<li>Tealium</li>
+	<li>Google Tag Manager</li>
+	<li>Work collaboratively with other internal groups – including SEO, Performance Management, Support and Sales teams.</li>
+	<li>Experience with PPC systems and tools.</li>
+	<li>capture and implement designs created by the UI team, add new functionality, enhancements, and improvements on the overall website aesthetic.</li>
+	<li>Rewrite existing code, and add new code on top of the pre-existing code.</li>
+	<li>Developed script to capture all online website data for Adobe Insight implementation</li>
+	<li>Debugged and troubleshoot JavaScript code using tools such as FireBug, Fiddler</li>
+	<li>Using JavaScript, SVG and HTML5 canvas developed novel and compelling widgets, tools, demos, and contributed to the advancement and promotion of this framework.</li>
+	<li>Ability to manage multiple projects at the same time while maintaining sharp attention to detail.</li>
+	<li>Excellent communication skills, great with people, good phone presence.</li>
+	<li>Organized and able to meet deadlines consistently.</li>
+	<li>Google Paid Placement Advertising</li>
+	<li>Amazon Advertising</li>	
+	<li>ROI Calculations and Google Analytics power user</li>
 	<li>Website development </li>
 	<li>Home Net</li>
 	<li>Fuzion Zone</li>
 	<li>Third-party Integrations such as CarFax, Cargurus, etc.  </li>
 	<li>Marketing Director </li>
-	<li>PPC</li>
-	<li>Amazon</li>
-	<li>Social Media</li>
-	<li>Set up direct mailers </li>
 	<li>Sales Team management </li>
 	<li>Social network management </li>
 	<li>Billboards and TV/Internet advertisements</li>
@@ -286,6 +336,7 @@
 	<li>Manage business development representatives for the lead generation process </li>
 	<li>Develop and maintain the new hire and interview processes for all BDC reps/appointment coordinators</li>
 </ul>
+
 </p>
                                 </div>
                             </div>
